--- a/MinimalAPIDemo.Test/MinimalAPIDemo.Test.csproj
+++ b/MinimalAPIDemo.Test/MinimalAPIDemo.Test.csproj
@@ -14,6 +14,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MinimalAPIDemo\MinimalAPIDemo.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
   </ItemGroup>
 
